<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Co-workerContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="Name">姓名</string>
    <string name="MobilePhoneNumber">手机号码</string>
    <string name="OfficePhoneNumber">办公室电话</string>
    <string name="Post">职务</string>
    <string name="Save">保存并返回</string>
    <string name="Return">返回</string>
    <string name="Research">输入工号或姓名或职位或手机或办公电话进行搜索</string>
    <string name="Call">打手机</string>
    <string name="Message">发短信</string>
    <string name="Update">更新</string>
    <string name="Card">发名片</string>

</resources>